# ms-fde-hackathon

./: README.md  openapi.yaml
docs/: architecture.md  evals.md  methodology.md
docs/api/: README.md
docs/challenge/: README.md
docs/challenge/task1/: README.md  customer_brief.md  engineering_review.md  routing_guide.md
docs/challenge/task2/: README.md  customer_brief.md  engineering_review.md  field_guide.md
docs/challenge/task3/: README.md  customer_brief.md  engineering_review.md  execution_guide.md
docs/eval/: README.md  fdebench.md  load-testing.md
docs/submission/: README.md
infra/: README.md
infra/app/: __main__.py  pyproject.toml
py/: .dockerignore  .env.example  Dockerfile  Makefile
py/apps/eval/: run_bruteforce_eval.py  run_eval.py  run_hard_eval.py
py/apps/sample/: main.py  models.py  pyproject.toml
py/apps/sample/tests/: test_platform_api.py
py/data/task1/: public_eval_50.json  public_eval_50_gold.json
py/data/task3/: public_eval_50.json  public_eval_50_gold.json
py/libs/fde/: pyproject.toml
py/libs/fde/src/fde/: __init__.py  config.py  contracts.py  metrics.py  platform.py
py/libs/fde/src/fde/extract/: __init__.py  prompt.py  service.py
py/libs/fde/src/fde/llm/: __init__.py  client.py  fake.py
py/libs/fde/src/fde/orchestrate/: __init__.py  knowledge.py  planner.py  prompt.py  service.py  tools.py
py/libs/fde/src/fde/triage/: __init__.py  calibration.py  knowledge.py  prompt.py  rules.py  service.py
py/libs/fde/tests/: test_extract.py  test_llm_client.py  test_metrics.py  test_orchestrate.py  test_triage.py
(+6 files in other folders)
