[project]
name = "fde"
version = "0.1.0"
description = "Deep-space FDEBench solution: triage / extract / orchestrate services + shared LLM client"
requires-python = ">=3.12"
dependencies = [
    "ms-common-models",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.0.0",
    "httpx>=0.28.1",
    "openai>=1.54.0",
]

[tool.uv.sources]
ms-common-models = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fde"]

[tool.pyright]
pythonVersion = "3.12"
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
